# tokio-js-set-interval

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  test_and_build.sh
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  rust.yml
examples/: example-with-move.rs  interval-and-timeout-like-in-javascript.rs  macro-possible-arguments.rs  minimal.rs
external-example/: Cargo.toml
external-example/src/: main.rs
src/: lib.rs
